--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "dependencies": {
-        "@open-wa/wa-automate": "^2.0.15",
+        "@open-wa/wa-automate": "^4.55.2",
         "api": "^5.0.6",
         "auth": "^0.0.1",
         "axios": "^1.2.3",
         "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.1",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -12,21 +13,24 @@
         "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
         "middleware": "^1.0.0",
+        "midtrans-client": "^1.3.1",
         "mongoose": "^6.8.4",
         "node-fetch": "^2.6.8",
         "otp-generator": "^4.0.0",
         "pg": "^8.8.0",
-        "sendchamp-sdk": "git+https://github.com/fuadop/sendchamp-sdk.git",
+        "postgresql": "^0.0.1",
+        "sequelize": "^6.28.0",
+        "twilio": "^4.7.1",
         "unless": "^0.1.1",
         "whatsapp-web.js": "^1.19.2"
     },
     "scripts": {
-        "start": "node server.js"
+        "start": "node index.js"
     },
     "name": "k24",
     "version": "1.0.0",
     "description": "API",
-    "main": "server.js",
+    "main": "index.js",
     "author": "Jamal",
     "license": "ISC"
 }
