--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "dependencies": {
-        "@open-wa/wa-automate": "^4.55.2",
+        "@open-wa/wa-automate": "^2.0.15",
         "api": "^5.0.6",
         "auth": "^0.0.1",
         "axios": "^1.2.3",
         "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -22,7 +23,9 @@
         "sequelize": "^6.28.0",
         "twilio": "^4.7.1",
         "unless": "^0.1.1",
-        "whatsapp-web.js": "^1.19.2"
+        "uuid": "^9.0.0",
+        "whatsapp-web.js": "^1.19.2",
+        "xendit-node": "^1.21.10"
     },
     "scripts": {
         "start": "node index.js"
