--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "express": "^4.18.2",
         "http": "^0.0.1-security",
         "jsonwebtoken": "^9.0.0",
+        "knex": "^2.4.2",
         "lodash": "^4.17.21",
         "middleware": "^1.0.0",
         "midtrans-client": "^1.3.1",
