--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "sequelize": "^6.28.0",
         "twilio": "^4.7.1",
         "uuid": "^9.0.0",
+        "validate-phone-number-node-js": "^0.0.1",
         "whatsapp-web.js": "^1.19.2",
         "xendit-node": "^1.21.10"
     },
