--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "midtrans-client": "^1.3.1",
         "mongoose": "^6.8.4",
         "node-fetch": "^2.6.8",
+        "nodemailer": "^6.9.1",
         "otp-generator": "^4.0.0",
         "pg": "^8.8.0",
         "pnpm": "^7.27.0",
