--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "jsonwebtoken": "^9.0.0",
         "knex": "^2.4.2",
         "lodash": "^4.17.21",
+        "mailtrap": "^3.0.1",
         "middleware": "^1.0.0",
         "midtrans-client": "^1.3.1",
         "mongoose": "^6.8.4",
