--- a/package.json
+++ b/package.json
@@ -1,42 +1,50 @@
 {
-    "dependencies": {
-        "api": "^5.0.6",
-        "auth": "^0.0.1",
-        "axios": "^1.2.3",
-        "bcrypt": "^5.1.0",
-        "body-parser": "^1.20.1",
-        "cors": "^2.8.5",
-        "crypto": "^1.0.1",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "http": "^0.0.1-security",
-        "jsonwebtoken": "^9.0.0",
-        "knex": "^2.4.2",
-        "lodash": "^4.17.21",
-        "mailtrap": "^3.0.1",
-        "middleware": "^1.0.0",
-        "midtrans-client": "^1.3.1",
-        "mongoose": "^6.8.4",
-        "node-fetch": "^2.6.8",
-        "nodemailer": "^6.9.1",
-        "otp-generator": "^4.0.0",
-        "pg": "^8.8.0",
-        "pnpm": "^7.27.0",
-        "request": "^2.88.2",
-        "sequelize": "^6.28.0",
-        "twilio": "^4.7.1",
-        "uuid": "^9.0.0",
-        "validate-phone-number-node-js": "^0.0.1",
-        "whatsapp-web.js": "^1.19.2",
-        "xendit-node": "^1.21.10"
-    },
-    "scripts": {
-        "start": "node server.js"
-    },
-    "name": "k24",
-    "version": "1.0.0",
-    "description": "API",
-    "main": "index.js",
-    "author": "Jamal",
-    "license": "ISC"
+  "dependencies": {
+    "api": "^5.0.6",
+    "auth": "^0.0.1",
+    "axios": "^1.2.3",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
+    "knex": "^2.4.2",
+    "lodash": "^4.17.21",
+    "mailtrap": "^3.0.1",
+    "middleware": "^1.0.0",
+    "midtrans-client": "^1.3.1",
+    "mongoose": "^6.8.4",
+    "node-fetch": "^2.6.8",
+    "nodemailer": "^6.9.1",
+    "otp-generator": "^4.0.0",
+    "pg": "^8.8.0",
+    "pnpm": "^7.27.0",
+    "request": "^2.88.2",
+    "sequelize": "^6.28.0",
+    "twilio": "^4.7.1",
+    "uuid": "^9.0.0",
+    "validate-phone-number-node-js": "^0.0.1",
+    "whatsapp-web.js": "^1.19.2",
+    "xendit-node": "^1.21.10"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "k24",
+  "version": "1.0.0",
+  "description": "API",
+  "main": "index.js",
+  "author": "Jamal",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KlinikCafe24/K24.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KlinikCafe24/K24/issues"
+  },
+  "homepage": "https://github.com/KlinikCafe24/K24#readme"
 }
